--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/style/main.css">
+  <link rel="stylesheet" href="assets/style/style.css">
   <title>client</title>
 </head>
 
@@ -32,11 +33,31 @@
   </header>
   <main id="app">
     <div class="container-fluid">
-      <div class="row my-3">
+      <div class="row">
+        <div class="col-12 d-none" id="bomb-form">
+          <form onsubmit="app.bombsController.addBomb(event)">
+            <div class="form-group">
+              <label for="Title">Title</label>
+              <input type="text" id="bombTitle">
+            </div>
+            <div class="form-group">
+              <label for="Post">Description</label>
+              <input type="text" id="bombPost">
+            </div>
+            <div class="form-group">
+              <label for="img" id="bombImg">img</label>
+              <input type="text">
+            </div>
+            <button type="submit">Post Bomb</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="row my-3" id="bomb-display">
         <div class="card col-4">
           <div class="card-header text-center">Title</div>
           <card-body class="m-auto">
-            <img src="assets/img/bomb.png" alt="bomb" height="200" width="200" onclick="">
+            <img src="assets/img/bomb.png" alt="bomb" height="200" width="200" onclick="app.bombsController.drawPost()">
           </card-body>
         </div>
         <!-- <div class="col-5">
@@ -59,6 +80,7 @@
   </main>
   <footer class="container-fluid bg-dark text-light">
     <div class="row text-center">
+      <div type="button" class="button fab" onclick="app.bombsController.toggleForm()">+</div>
       <div class="col">
         <p><small>Made with 💖 by CodeWorks</small></p>
       </div>
