--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
               <label for="img" id="bombImg">img</label>
-              <input type="text">
+              <input type="text" id="bombImg">
             </div>
             <button type="submit">Post Bomb</button>
           </form>
