--- a/client/index.html
+++ b/client/index.html
@@ -53,9 +53,11 @@
         </div>
       </div>
 
-      <div class="row my-3" id="bomb-display">
+      <div class="row p-5" id="bomb-display">
         <div class="card col-4">
-          <div class="card-header text-center">Title</div>
+          <div>
+            <h3 class="text-center">Title</h3>
+          </div>
           <card-body class="m-auto">
             <img src="assets/img/bomb.png" alt="bomb" height="200" width="200" onclick="app.bombsController.drawPost()">
           </card-body>
