--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <title>client</title>
 </head>
 
@@ -32,23 +34,24 @@
     </nav>
   </header>
   <main id="app">
+
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-12 d-none" id="bomb-form">
-          <form onsubmit="app.bombsController.addBomb(event)">
+      <div class="row p-3">
+        <div class="col-3 card d-none p-3" id="bomb-form">
+          <form class="" onsubmit="app.bombsController.addBomb(event)">
             <div class="form-group">
-              <label for="Title">Title</label>
-              <input type="text" id="bombTitle">
+              <label for="Title"></label>
+              <input type="text" id="bombTitle" placeholder="hoo dis bom abowt">
             </div>
             <div class="form-group">
-              <label for="Post">Description</label>
-              <input type="text" id="bombPost">
+              <label for="Post"></label>
+              <input type="text" id="bombPost" placeholder="Ur bomb hur">
             </div>
             <div class="form-group">
-              <label for="img" id="bombImg">img</label>
-              <input type="text" id="bombImg">
+              <label for="img" id="bombImg"></label>
+              <input type="text" id="bombImg" placeholder="drawp a pic url hur">
             </div>
-            <button type="submit">Post Bomb</button>
+            <button class="btn btn-danger btn-small float-right" type="submit">Drop bomb</button>
           </form>
         </div>
       </div>
@@ -82,7 +85,7 @@
   </main>
   <footer class="container-fluid bg-dark text-light">
     <div class="row text-center">
-      <div type="button" class="button fab" onclick="app.bombsController.toggleForm()">+</div>
+      <i class="fas fa-bomb geeks fab fa-4x" onclick="app.bombsController.toggleForm()"></i>
       <div class="col">
         <p><small>Made with 💖 by CodeWorks</small></p>
       </div>
