--- a/client/index.html
+++ b/client/index.html
@@ -83,9 +83,14 @@
       </div>
     </div>
   </main>
+
+
+
+  <i class="fas fa-bomb bomb fa-4x" onclick="app.bombsController.toggleForm()">
+    <div class="geeks"></div>
+  </i>
   <footer class="container-fluid bg-dark text-light">
     <div class="row text-center">
-      <i class="fas fa-bomb geeks fab fa-4x" onclick="app.bombsController.toggleForm()"></i>
       <div class="col">
         <p><small>Made with 💖 by CodeWorks</small></p>
       </div>
