--- a/client/index.html
+++ b/client/index.html
@@ -9,18 +9,17 @@
   <link rel="stylesheet" href="assets/style/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-  <title>client</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+  <title>Bomb.com</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
       <a class="navbar-brand" href="#">
-        <span class="ml-2">client</span>
+        <span class="ml-2">Bomb.com</span>
       </a>
-      <button class="btn btn-primary">Bangers</button>
-      <button class="btn btn-primary">Duds</button>
-      <button class="btn btn-primary">Recent</button>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,7 +55,7 @@
         </div>
       </div>
 
-      <div class="row p-5" id="bomb-display">
+      <div class="row" id="bomb-display">
         <div class="card col-4">
           <div>
             <h3 class="text-center">Title</h3>
