--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="row" id="bomb-display">
+      <div class="row d-flex justify-content-center" id="bomb-display">
         <div class="card col-4">
           <div>
             <h3 class="text-center">Title</h3>
